--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
   },
   "dependencies": {
     "@bryntum/demo-resources": "1.1.0",
-    "@bryntum/scheduler": "5.1.1",
-    "@bryntum/scheduler-react": "5.1.1",
+    "@bryntum/scheduler": "5.1.3",
+    "@bryntum/scheduler-react": "5.1.3",
     "@types/node": "~12.6.8",
     "@types/react-dom": "~16.8.5",
+    "moment": "^2.29.4",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
     "react-scripts": "~4.0.3",
